--- a/Map/index.html
+++ b/Map/index.html
@@ -10,16 +10,12 @@
             height: 500px;
             width: 100%;
         }
-        body {
-            font-family: Arial, sans-serif;
-        }
         #timezone-info {
             margin-top: 20px;
         }
     </style>
 </head>
 <body>
-
     <h1>Carte interactive - Fuseau horaire</h1>
     <div id="map"></div>
     <div id="timezone-info">
@@ -38,6 +34,7 @@
         }).addTo(map);
 
         var apiKey = 'CF92NCXAFCRX';
+        var marker;
 
         function getTimezoneFromLatLng(lat, lng) {
             var url = `http://api.timezonedb.com/v2.1/get-time-zone?key=${apiKey}&format=json&by=position&lat=${lat}&lng=${lng}`;
@@ -56,6 +53,13 @@
         map.on('click', function (e) {
             var lat = e.latlng.lat;
             var lng = e.latlng.lng;
+
+            if (marker) {
+                marker.setLatLng([lat, lng]);
+            } else {
+                marker = L.marker([lat, lng]).addTo(map);
+            }
+
             getTimezoneFromLatLng(lat, lng);
         });
     </script>
